@@ -4,6 +4,7 @@
  - Build fix for clang++ 3.0.
  - Supports C++11.
  - No longer has obsolete debian & RPM packaging built in.
+ - Fixed failure to detect some integer overflows during conversion.
 4.0
  - API change: noticers are gone!  Use errorhandlers to capture error output.
  - API change: tablereaders and tablewriters are gone; they weren't safe.
